Footer design and removed useless text on homepage

--- a/src/main/webapp/app/shared/layout/footer/footer.scss
+++ b/src/main/webapp/app/shared/layout/footer/footer.scss
@@ -1,3 +1,10 @@
 .footer {
-  height: 50px;
+  height: 125px;
+  color: white;
+  padding: 50px 0 75px 0;
+  text-align: center;
+  font-size: 1.35em;
+  font-weight: 900;
+  text-decoration: underline;
+  position: fixed bottom 0;
 }
